SERVER-71006 Fix race where a reader does not observe a concurrent multikey write

(cherry picked from commit cf648f7bc75f11fa316f6e9fbb737cf9763742c3)